--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -5,6 +5,7 @@
     <% var startYear = (theme.copyright && theme.copyright.start_year) ? theme.copyright.start_year : new Date().getFullYear() %>
     <%= startYear >= endYear ? endYear : startYear + "-" + endYear %>
     <%= config.author || config.title %>
+    浙ICP备19006104号
   </div>
   <div class="footer-right">
     <nav>
