--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -5,7 +5,7 @@
     <% var startYear = (theme.copyright && theme.copyright.start_year) ? theme.copyright.start_year : new Date().getFullYear() %>
     <%= startYear >= endYear ? endYear : startYear + "-" + endYear %>
     <%= config.author || config.title %>
-    <a href="http://www.beian.miit.gov.cn">浙ICP备19006104号</a>
+    <a href="http://www.beian.gov.cn">浙ICP备19006104号</a>
   </div>
   <div class="footer-right">
     <nav>
