--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -5,9 +5,9 @@
       <span class="author" itemprop="author" itemscope itemtype="http://schema.org/Person">
         <span itemprop="name"><% if (page.author) { %><%- page.author %><% } else { %><%- config.author %><% } %></span>
       </span>
-      <%- partial('_partial/post/date', { post: page, class_name: 'postdate' }) %>
-      <%- partial('_partial/post/category') %>
-      <%- partial('_partial/post/tag') %>
+      &nbsp;<%- partial('_partial/post/date', { post: page, class_name: 'postdate' }) %>
+      &nbsp;<%- partial('_partial/post/category') %>
+      &nbsp;<%- partial('_partial/post/tag') %>
     </div>
   </header>
   <%- partial('_partial/post/gallery') %>
